<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Outsider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="bye_world">Bye world!</string>
    <string name="watch_video">Watch video</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="bmx">BMX</string>
    <string name="ski">Ski</string>
    <string name="longboard">Longboard</string>
    <string name="skate">Skate</string>
    <string name="snowboard">Snowboard</string>
    <string name="surf">Surf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="menu">Menu</string>
    <string name="longboard_video">Longboard video</string>
    <string name="bmx_video">BMX video</string>
    <string name="trick_tutorials">Trick tutorials</string>
    <string name="longboard_shapes">Longboard shapes</string>
    <string name="videos">Videos</string>
    <string name="title_activity_view_video">ViewVideoActivity</string>
    <string name="api_video">API Video</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_clear">Clear</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
